Sun Nov  9 17:45:11 EET 2003  Pekka Riikonen <priikone@silcnet.org>

	* Added CRT (Chinese Remainder Theorem) supported RSA
	  private keys and private key operations.  This significantly
	  increases private key operation efficiency.  No compatibility
	  issues with new or old private keys.  Affected files are
	  lib/silccrypt/rsa.[ch], rsa_internal.h and pkcs1.c.

Sat Nov  8 13:08:53 EET 2003  Pekka Riikonen <priikone@silcnet.org>

	* Fixed GCC-3.3.2 related compilation warnings from the
	  source tree.

Fri Nov  7 23:01:47 EET 2003  Pekka Riikonen <priikone@silcnet.org>

	* Removed RC6 from distributions.

Fri Nov  7 19:38:42 EET 2003  Pekka Riikonen <priikone@silcnet.org>

	* Added some better comments to lib/silccrypt/silcpkcs.h,
	  optimized some routines in lib/silccrypt/silcpkcs.c.
	  Added test_silcpkcs into lib/silccrypt/tests/.

	* Fixed silc_rng_global_init to actually init the global RNG
	  if RNG wasn't provided for it.  Affected file is
	  lib/silccrypt/silrng.c.

Thu Nov  6 21:08:28 EET 2003  Pekka Riikonen <priikone@silcnet.org>

	* Added silc_hash_table_find_by_context_ext.  Affected files
	  lib/silcutil/silchashtable.[ch].

	* Save the public key on normal server in WHOIS command reply
	  from attributes, if present, and add it to public key hash
	  table.  Fixes WHOIS resolving by public key on normal server.

	  Optimized the attributes resolving on normal server to not
	  resolve if we resolved them already from router.

	  Affected files are silcd/server_query.c, command_reply.c.

Wed Nov  5 19:36:30 CET 2003 Patrik Weiskircher <pat@icore.at>

	* Added support for whois using attributes.
	  Affected files silcd/command_reply.c, silcd/packet_receive.c,
	  silcd/server.c, silcd/server_internal.h, silcd/server_query.c,
	  silcd/server_util.c

	* Added support for whois using public key attribute to /WHOIS i
	  client command. Affected files irssi/docs/help/in/whois.in,
	  irssi/src/silc/core/silc-servers.c, lib/silcclient/command.c
